cabal-version:   2.0
name:            bot
version:         0.0.0
license:         MIT
license-file:    LICENSE
copyright:       2019 Ben Simms
maintainer:      ben@bensimms.moe
author:          Ben Simms
tested-with:     GHC ==8.10.7
homepage:        https://github.com/nitros12/calamity-bot
bug-reports:     https://github.com/nitros12/calamity-bot/issues
synopsis:        A discord bot
description:     A discord bot
category:        Bots
build-type:      Simple
extra-doc-files:
  CHANGELOG.md
  README.md

source-repository head
  type:     git
  location: https://github.com/nitros12/calamity-bot

executable bot
  main-is:            Main.hs
  hs-source-dirs:     app
  default-language:   Haskell2010
  ghc-options: -fplugin=Polysemy.Plugin -funbox-strict-fields -Wall -fno-warn-name-shadowing
  build-depends:
      base                     >=4.12      && <5
    , calamity >= 0.5
    , polysemy
    , polysemy-plugin
    , text
    , optics
    , di-polysemy
    , di
    , df1
    , di-core
    , pretty-simple
    , data-default-class
    , text-show
