cabal-version: 2.0
name:          bot
version:       0.0.0
license:       MIT
copyright:     2019 Ben Simms
maintainer:    ben@bensimms.moe
author:        Ben Simms
tested-with:   GHC ==8.10.7
homepage:      https://github.com/nitros12/calamity-bot
bug-reports:   https://github.com/nitros12/calamity-bot/issues
synopsis:      A discord bot
description:   A discord bot
category:      Bots
build-type:    Simple

source-repository head
  type:     git
  location: https://github.com/nitros12/calamity-bot

executable bot
  main-is:          Main.hs
  hs-source-dirs:   app
  default-language: Haskell2010
  ghc-options:
    -fplugin=Polysemy.Plugin -funbox-strict-fields -Wall
    -fno-warn-name-shadowing

  build-depends:
      base                >=4.12 && <5
    , calamity            >=0.5
    , data-default-class
    , df1
    , di
    , di-core
    , di-polysemy
    , optics
    , polysemy
    , polysemy-plugin
    , pretty-simple
    , text
    , text-show
