cabal-version:      2.0
name:               calamity-commands
version:            0.4.0.0
synopsis:
  A library for declaring, parsing, and invoking text-input based commands

description:
  Please see the README on GitHub at <https://github.com/simmsb/calamity#readme>

category:           Utils
homepage:           https://github.com/simmsb/calamity
bug-reports:        https://github.com/simmsb/calamity/issues
author:             Ben Simms
maintainer:         ben@bensimms.moe
copyright:          2020 Ben Simms
license:            MIT
license-file:       LICENSE
build-type:         Simple
tested-with:        GHC ==9.4.4
extra-source-files:
  ChangeLog.md
  README.md

extra-doc-files:    README.md

source-repository head
  type:     git
  location: https://github.com/simmsb/calamity

library
  exposed-modules:
    CalamityCommands
    CalamityCommands.AliasType
    CalamityCommands.Check
    CalamityCommands.Command
    CalamityCommands.CommandUtils
    CalamityCommands.Context
    CalamityCommands.Dsl
    CalamityCommands.Error
    CalamityCommands.Group
    CalamityCommands.Handler
    CalamityCommands.Help
    CalamityCommands.Internal.LocalWriter
    CalamityCommands.Internal.RunIntoM
    CalamityCommands.Internal.Utils
    CalamityCommands.ParameterInfo
    CalamityCommands.ParsePrefix
    CalamityCommands.Parser
    CalamityCommands.Utils

  hs-source-dirs:     ./
  default-extensions:
    NoMonomorphismRestriction
    AllowAmbiguousTypes
    BangPatterns
    BinaryLiterals
    BlockArguments
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    DoAndIfThenElse
    DuplicateRecordFields
    EmptyDataDecls
    ExistentialQuantification
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    OverloadedLabels
    OverloadedStrings
    PartialTypeSignatures
    PatternGuards
    PolyKinds
    RankNTypes
    RecordWildCards
    RoleAnnotations
    ScopedTypeVariables
    StandaloneDeriving
    StrictData
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    TypeSynonymInstances
    UndecidableInstances
    ViewPatterns

  ghc-options:
    -fplugin=Polysemy.Plugin -funbox-strict-fields -Wall
    -fno-warn-name-shadowing

  build-depends:
      base                  >=4.13  && <5
    , megaparsec            >=8     && <10
    , optics                >=0.4.1 && <0.5
    , polysemy              >=1.5   && <2
    , polysemy-plugin       >=0.3   && <0.5
    , text                  >=1.2   && <2.1
    , text-show             >=3.8   && <4
    , unordered-containers  >=0.2   && <0.3

  default-language:   Haskell2010
