cabal-version:      2.0
name:               calamity
version:            0.12.0.0
synopsis:           A library for writing discord bots in haskell
description:
  Please see the README on GitHub at <https://github.com/simmsb/calamity#readme>

category:           Network, Web
homepage:           https://github.com/simmsb/calamity
bug-reports:        https://github.com/simmsb/calamity/issues
author:             Ben Simms
maintainer:         ben@bensimms.moe
copyright:          2020 Ben Simms
license:            MIT
license-file:       LICENSE
build-type:         Simple
tested-with:        GHC ==9.6.5
extra-source-files:
  ChangeLog.md
  README.md

extra-doc-files:    README.md

source-repository head
  type:     git
  location: https://github.com/simmsb/calamity

library
  exposed-modules:
    Calamity
    Calamity.Cache.Eff
    Calamity.Cache.InMemory
    Calamity.Client
    Calamity.Client.Client
    Calamity.Client.ShardManager
    Calamity.Client.Types
    Calamity.Commands
    Calamity.Commands.CalamityParsers
    Calamity.Commands.Context
    Calamity.Commands.Dsl
    Calamity.Commands.Help
    Calamity.Commands.Types
    Calamity.Commands.Utils
    Calamity.Gateway
    Calamity.Gateway.DispatchEvents
    Calamity.Gateway.Intents
    Calamity.Gateway.Shard
    Calamity.Gateway.Types
    Calamity.HTTP
    Calamity.HTTP.AuditLog
    Calamity.HTTP.Channel
    Calamity.HTTP.Emoji
    Calamity.HTTP.Guild
    Calamity.HTTP.Interaction
    Calamity.HTTP.Internal.Ratelimit
    Calamity.HTTP.Internal.Request
    Calamity.HTTP.Internal.Route
    Calamity.HTTP.Internal.Types
    Calamity.HTTP.Invite
    Calamity.HTTP.MiscRoutes
    Calamity.HTTP.Reason
    Calamity.HTTP.User
    Calamity.HTTP.Webhook
    Calamity.Interactions
    Calamity.Interactions.Eff
    Calamity.Interactions.Utils
    Calamity.Interactions.View
    Calamity.Internal.BoundedStore
    Calamity.Internal.ConstructorName
    Calamity.Internal.IntColour
    Calamity.Internal.LocalWriter
    Calamity.Internal.RunIntoIO
    Calamity.Internal.SnowflakeMap
    Calamity.Internal.UnixTimestamp
    Calamity.Internal.Updateable
    Calamity.Internal.Utils
    Calamity.Metrics.Eff
    Calamity.Metrics.Internal
    Calamity.Metrics.Noop
    Calamity.Types
    Calamity.Types.CDNAsset
    Calamity.Types.LogEff
    Calamity.Types.Model
    Calamity.Types.Model.Avatar
    Calamity.Types.Model.Channel
    Calamity.Types.Model.Channel.Attachment
    Calamity.Types.Model.Channel.ChannelType
    Calamity.Types.Model.Channel.Component
    Calamity.Types.Model.Channel.DM
    Calamity.Types.Model.Channel.Embed
    Calamity.Types.Model.Channel.Group
    Calamity.Types.Model.Channel.Guild
    Calamity.Types.Model.Channel.Guild.Category
    Calamity.Types.Model.Channel.Guild.Text
    Calamity.Types.Model.Channel.Guild.Voice
    Calamity.Types.Model.Channel.Message
    Calamity.Types.Model.Channel.Reaction
    Calamity.Types.Model.Channel.UpdatedMessage
    Calamity.Types.Model.Channel.Webhook
    Calamity.Types.Model.Guild
    Calamity.Types.Model.Guild.AuditLog
    Calamity.Types.Model.Guild.Ban
    Calamity.Types.Model.Guild.Emoji
    Calamity.Types.Model.Guild.Guild
    Calamity.Types.Model.Guild.Invite
    Calamity.Types.Model.Guild.Member
    Calamity.Types.Model.Guild.Overwrite
    Calamity.Types.Model.Guild.Permissions
    Calamity.Types.Model.Guild.Role
    Calamity.Types.Model.Guild.UnavailableGuild
    Calamity.Types.Model.Interaction
    Calamity.Types.Model.Presence
    Calamity.Types.Model.Presence.Activity
    Calamity.Types.Model.Presence.Presence
    Calamity.Types.Model.User
    Calamity.Types.Model.Voice
    Calamity.Types.Model.Voice.VoiceRegion
    Calamity.Types.Model.Voice.VoiceState
    Calamity.Types.Partial
    Calamity.Types.Snowflake
    Calamity.Types.Tellable
    Calamity.Types.Token
    Calamity.Types.TokenEff
    Calamity.Types.Upgradeable
    Calamity.Utils
    Calamity.Utils.CDNUrl
    Calamity.Utils.Colour
    Calamity.Utils.Message
    Calamity.Utils.Permissions

  hs-source-dirs:     ./
  default-extensions:
    AllowAmbiguousTypes
    BangPatterns
    BinaryLiterals
    BlockArguments
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    DoAndIfThenElse
    DuplicateRecordFields
    EmptyDataDecls
    ExistentialQuantification
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    NoMonomorphismRestriction
    OverloadedLabels
    OverloadedStrings
    PartialTypeSignatures
    PatternGuards
    PolyKinds
    QuasiQuotes
    RankNTypes
    RecordWildCards
    RoleAnnotations
    ScopedTypeVariables
    StandaloneDeriving
    StrictData
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    TypeSynonymInstances
    UndecidableInstances
    ViewPatterns

  ghc-options:        -funbox-strict-fields -Wall -fno-warn-name-shadowing
  build-depends:
      aeson                 >=2.1     && <2.3
    , aeson-optics          >=1.2     && <2
    , async                 >=2.2     && <3
    , base                  >=4.13    && <5
    , bytestring            >=0.10    && <0.13
    , calamity-commands     >=0.4     && <0.5
    , colour                >=2.3.5   && <2.4
    , concurrent-extra      >=0.7     && <0.8
    , containers            >=0.6     && <0.8
    , crypton-connection    >=0.2.6   && <0.4
    , crypton-x509-system   >=1.6.6   && <1.7
    , data-default-class    >=0.1     && <0.2
    , data-flags            >=0.0.3   && <0.1
    , deepseq               >=1.4.4.0 && <2
    , deque                 >=0.4     && <0.5
    , df1                   >=0.4     && <0.5
    , di-core               >=1.0.4   && <1.1
    , di-polysemy           >=0.2     && <0.3
    , exceptions            >=0.10    && <0.11
    , focus                 >=1.0     && <2
    , hashable              >=1.2     && <2
    , http-api-data         >=0.4.3   && <0.7
    , http-client           >=0.5     && <0.8
    , http-date             >=0.0.8   && <0.1
    , http-types            >=0.12    && <0.13
    , megaparsec            >=8       && <10
    , mime-types            >=0.1     && <0.2
    , mtl                   >=2.2     && <3
    , optics                >=0.4.1   && <0.5
    , polysemy              >=1.5     && <2
    , polysemy-plugin       >=0.3     && <0.5
    , random                >=1.2     && <1.3
    , reflection            >=2.1     && <3
    , req                   >=3.9.2   && <3.14
    , safe-exceptions       >=0.1     && <2
    , scientific            >=0.3     && <0.4
    , stm                   >=2.5     && <3
    , stm-chans             >=3.0     && <4
    , stm-containers        >=1.1     && <2
    , text                  >=1.2     && <2.2
    , text-show             >=3.8     && <4
    , time                  >=1.8     && <1.15
    , tls                   >=1.7     && <3
    , typerep-map           >=0.5     && <0.7
    , unagi-chan            >=0.4     && <0.5
    , unboxing-vector       >=0.2     && <0.3
    , unordered-containers  >=0.2     && <0.3
    , vector                >=0.12    && <0.14
    , websockets            >=0.13    && <0.14

  default-language:   Haskell2010
